--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -90,7 +90,7 @@ section {
 }
 
 .intro_sec .h_bg-image {
-  background-image: url("../../assets/images/1612897383195.jfif");
+  background-image: url("../../assets/images/iStock-1152537185.webp");
   background-size: cover;
   background-position: top;
   position: relative;
